# yueliang

./: .gitignore  Cargo.toml  deploy.sh  rust-toolchain.toml
assets/: Act Beloved.mid
docs/: README.md
docs/architecture/: modules.md  overview.md  port-mapping.md
docs/decisions/: drum-channel-placement.md  midi-chase-implementation.md  midi-loader-separation.md  naming-conventions.md  soundfont-cache.md  tick-based-event-storage.md
docs/knowledge/: egui-drag-sort.md  gain-parameter-design.md  nih-plug-egui-integration.md  nih-plug-plugin-trait.md  oscillator-phase-continuity.md  parameter-design.md  vst3-deployment.md  xsynth-core-api.md
docs/notes/: debugging-techniques.md  drag-sort-insert-index.md  egui-grid-min-col-width.md  midi-chase-behavior.md  realtime-midi-pipeline.md  redlines.md
docs/project/: status.md
src/: data.rs  editor.rs  engine.rs  lib.rs  utils.rs
src/data/: event.rs  midi_loader.rs
src/editor/: channel_matrix.rs  left_bar.rs  sf_list.rs  sf_manager.rs  transport.rs
src/engine/: midi_filter.rs  midi_mapper.rs  midi_player.rs  pipeline.rs  synth.rs
