[package]
name = "yueliang"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149e", features = ["assert_process_allocs"] }
nih_plug_egui  = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149e" }

xsynth-core = "0.4.0"
xsynth-soundfonts = "0.4.0"
#我们不使用xsynth-realtime，它不适合用在VST情景

midly = "0.5.3"

#crossbeam-queue = "0.3.12"
#arc-swap = "1.9.1" # 非常适合用于替换路由表或音色库指针

parking_lot = "0.12.5"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
egui-system-fonts = "0.34.0"